--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <p>bleep bloop.</p>
             </div>
             <div class="col-lg-4">
-              <p>worthington.ee@gmail.com</p>
+              <p><a href="mailto:worthington.ee@gmail.com?Subject=Hi%20Eve!" target="_top">worthington.ee@gmail.com</a></p>
             </div>
           </div>
         </div>
