--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>{{ site.data.settings.title }}</title>
+    <title>{{ site.title }}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
         <div class="container" id="about">
           <div class="row">
             <div class="col-lg-6 col-lg-offset-3">
-              <span><h1>{{ site.data.settings.title }}</h1></span>
+              <span><h1>{{ site.title }}</h1></span>
               <img src="assets/img/me_eve.jpg" class="img-circle img-responsive" id="meeve">
               <h3>Extraordinarily talented, smart, driven and humble web designer and developer.</h3>
               <p>After graduating from the University of Washington, I taught English in rural Japan for two years. Now I'm back in my home city of Seattle and teaching myself the magical language of the web. You can probably find me coding away in the corner of a local coffee shop. Or at home watching reruns of The X-files. Either way, rest assured that I'm living <em>my best life</em>.</p>
