--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               <img src="assets/img/me_eve.jpg" class="img-circle img-responsive" id="meeve">
               <h3>Extraordinarily talented, smart, driven and humble web designer and developer.</h3>
               <p>After graduating from the University of Washington, I taught English in rural Japan for two years. Now I'm back in my home city of Seattle and teaching myself the magical language of the web. You can probably find me coding away in the corner of a local coffee shop. Or at home watching reruns of The X-files. Either way, rest assured that I'm living <em>my best life</em>.</p>
+              <p>I'm currently a Web Developer Apprentice for <a href="http://www.iangilman.com/" target="_blank">Ian Gilman</a>.</p>
             </div>
           </div>
           <! --/row -->
@@ -51,7 +52,7 @@
       </div>
       <! --/headerwrap -->
 
-
+<!--
       <section id="works"></section>
       <div class="container">
         <div class="row centered mt mb" id="portfolio">
@@ -79,7 +80,7 @@
         <! --/row -->
       </div>
       <! --/container -->
-      
+       -->
           {% include footer.html %}
 
     <!-- Bootstrap core JavaScript
