adding more descriptions to portfolio

--- a/index.html
+++ b/index.html
@@ -192,36 +192,223 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                  <img class="img-responsive galthumb" src="http://placehold.it/400x300" alt="MemEater">
+                <img class="img-responsive galthumb" data-toggle="modal" data-target=".bd-gal2-modal-lg" src="http://placehold.it/400x300" alt="">
               </div>
+
+              <!-- Modal -->
+              <div class="modal fade bd-gal2-modal-lg" tabindex="-1" role="dialog" aria-labelledby="portfolio item" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="gridModalLabel">Information Dissemination Specialist</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="row">
+                        <img src="../1gb.github.io/img/portfolio/memEater750x400.jpg" class="img-responsive" alt="Information Dissemination Specialist">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                          <p>Information Dissemination Specialist was built for <a href="http://www.arthackday.net/events/erasure" target="_blank">Art Hack Day: Erasure</a>.
+                              Visitors were invited to sit down at a replica office cubicle and take on the role of Information Dissemination Specialist for the FBI.
+                              They would then be presented with topics and documents to redact before public release.
+
+                              It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
+                          <p>Check out Information Dissemination Specialist <a href="http://www.eveworthington.com/ids/" target="_blank">here</a>.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                  <img class="img-responsive galthumb" src="http://placehold.it/400x300" alt="Information Dissemination Specialist">
+                <img class="img-responsive galthumb" data-toggle="modal" data-target=".bd-gal3-modal-lg" src="http://placehold.it/400x300" alt="">
               </div>
+
+              <!-- Modal -->
+              <div class="modal fade bd-gal3-modal-lg" tabindex="-1" role="dialog" aria-labelledby="portfolio item" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="gridModalLabel">MemEater</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="row">
+                        <img src="../1gb.github.io/img/portfolio/memEater750x400.jpg" class="img-responsive" alt="MemEater">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                          <p>MemEater was a collaborative project built in 48 hours for <a href="http://www.arthackday.net/events/erasure" target="_blank">Art Hack Day: Erasure</a>.
+                              Visitors were invited to share a memory via a laptop. Their memory would then displayed via a projector on a wall along with the memories entered by previous participants.
+                              If MemEater detected that a word was used in multiple memories, it would black out all instances of that word except for the most recent one.
+                              The concept, graphics and design were created by the incredible Illustrator/Architect <a href="http://www.myralara.com/" target="_blank">Myra Lara</a> and I contributed the code.
+                              It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
+                          <p>Check out MemEater <a href="http://www.eveworthington.com/memoryEater/" target="_blank">here</a>.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                  <a class="thumbnail" href="#">
-                      <img class="img-responsive galthumb" src="http://placehold.it/400x300" alt="Wage Per Second">
-                  </a>
+                <img class="img-responsive galthumb" data-toggle="modal" data-target=".bd-gal4-modal-lg" src="http://placehold.it/400x300" alt="">
               </div>
+
+              <!-- Modal -->
+              <div class="modal fade bd-gal4-modal-lg" tabindex="-1" role="dialog" aria-labelledby="portfolio item" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="gridModalLabel">MemEater</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="row">
+                        <img src="../1gb.github.io/img/portfolio/memEater750x400.jpg" class="img-responsive" alt="MemEater">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                          <p>MemEater was a collaborative project built in 48 hours for <a href="http://www.arthackday.net/events/erasure" target="_blank">Art Hack Day: Erasure</a>.
+                              Visitors were invited to share a memory via a laptop. Their memory would then displayed via a projector on a wall along with the memories entered by previous participants.
+                              If MemEater detected that a word was used in multiple memories, it would black out all instances of that word except for the most recent one.
+                              The concept, graphics and design were created by the incredible Illustrator/Architect <a href="http://www.myralara.com/" target="_blank">Myra Lara</a> and I contributed the code.
+                              It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
+                          <p>Check out MemEater <a href="http://www.eveworthington.com/memoryEater/" target="_blank">here</a>.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                  <a class="thumbnail" href="#">
-                      <img class="img-responsive galthumb" src="http://placehold.it/400x300" alt="Downuts">
-                  </a>
+                <img class="img-responsive galthumb" data-toggle="modal" data-target=".bd-gal5-modal-lg" src="http://placehold.it/400x300" alt="">
               </div>
+
+              <!-- Modal -->
+              <div class="modal fade bd-gal5-modal-lg" tabindex="-1" role="dialog" aria-labelledby="portfolio item" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="gridModalLabel">MemEater</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="row">
+                        <img src="../1gb.github.io/img/portfolio/memEater750x400.jpg" class="img-responsive" alt="MemEater">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                          <p>MemEater was a collaborative project built in 48 hours for <a href="http://www.arthackday.net/events/erasure" target="_blank">Art Hack Day: Erasure</a>.
+                              Visitors were invited to share a memory via a laptop. Their memory would then displayed via a projector on a wall along with the memories entered by previous participants.
+                              If MemEater detected that a word was used in multiple memories, it would black out all instances of that word except for the most recent one.
+                              The concept, graphics and design were created by the incredible Illustrator/Architect <a href="http://www.myralara.com/" target="_blank">Myra Lara</a> and I contributed the code.
+                              It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
+                          <p>Check out MemEater <a href="http://www.eveworthington.com/memoryEater/" target="_blank">here</a>.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                  <a class="thumbnail" href="#">
-                      <img class="img-responsive galthumb" src="http://placehold.it/400x300" alt="Weatherrific!">
-                  </a>
+                <img class="img-responsive galthumb" data-toggle="modal" data-target=".bd-gal6-modal-lg" src="http://placehold.it/400x300" alt="">
               </div>
+
+              <!-- Modal -->
+              <div class="modal fade bd-gal6-modal-lg" tabindex="-1" role="dialog" aria-labelledby="portfolio item" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="gridModalLabel">MemEater</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="row">
+                        <img src="../1gb.github.io/img/portfolio/memEater750x400.jpg" class="img-responsive" alt="MemEater">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                          <p>MemEater was a collaborative project built in 48 hours for <a href="http://www.arthackday.net/events/erasure" target="_blank">Art Hack Day: Erasure</a>.
+                              Visitors were invited to share a memory via a laptop. Their memory would then displayed via a projector on a wall along with the memories entered by previous participants.
+                              If MemEater detected that a word was used in multiple memories, it would black out all instances of that word except for the most recent one.
+                              The concept, graphics and design were created by the incredible Illustrator/Architect <a href="http://www.myralara.com/" target="_blank">Myra Lara</a> and I contributed the code.
+                              It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
+                          <p>Check out MemEater <a href="http://www.eveworthington.com/memoryEater/" target="_blank">here</a>.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                  <a class="thumbnail" href="#">
-                      <img class="img-responsive galthumb" src="http://placehold.it/400x300" alt="Pomodoro Timer">
-                  </a>
+                <img class="img-responsive galthumb" data-toggle="modal" data-target=".bd-gal7-modal-lg" src="http://placehold.it/400x300" alt="">
               </div>
+
+              <!-- Modal -->
+              <div class="modal fade bd-gal7-modal-lg" tabindex="-1" role="dialog" aria-labelledby="portfolio item" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="gridModalLabel">MemEater</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="row">
+                        <img src="../1gb.github.io/img/portfolio/memEater750x400.jpg" class="img-responsive" alt="MemEater">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                          <p>MemEater was a collaborative project built in 48 hours for <a href="http://www.arthackday.net/events/erasure" target="_blank">Art Hack Day: Erasure</a>.
+                              Visitors were invited to share a memory via a laptop. Their memory would then displayed via a projector on a wall along with the memories entered by previous participants.
+                              If MemEater detected that a word was used in multiple memories, it would black out all instances of that word except for the most recent one.
+                              The concept, graphics and design were created by the incredible Illustrator/Architect <a href="http://www.myralara.com/" target="_blank">Myra Lara</a> and I contributed the code.
+                              It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
+                          <p>Check out MemEater <a href="http://www.eveworthington.com/memoryEater/" target="_blank">here</a>.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                  <a class="thumbnail" href="#">
-                      <img class="img-responsive galthumb" src="http://placehold.it/400x300" alt="JavaScript Calculator">
-                  </a>
+                <img class="img-responsive galthumb" data-toggle="modal" data-target=".bd-gal8-modal-lg" src="http://placehold.it/400x300" alt="">
               </div>
+
+              <!-- Modal -->
+              <div class="modal fade bd-gal8-modal-lg" tabindex="-1" role="dialog" aria-labelledby="portfolio item" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title" id="gridModalLabel">MemEater</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="row">
+                        <img src="../1gb.github.io/img/portfolio/memEater750x400.jpg" class="img-responsive" alt="MemEater">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                          <p>MemEater was a collaborative project built in 48 hours for <a href="http://www.arthackday.net/events/erasure" target="_blank">Art Hack Day: Erasure</a>.
+                              Visitors were invited to share a memory via a laptop. Their memory would then displayed via a projector on a wall along with the memories entered by previous participants.
+                              If MemEater detected that a word was used in multiple memories, it would black out all instances of that word except for the most recent one.
+                              The concept, graphics and design were created by the incredible Illustrator/Architect <a href="http://www.myralara.com/" target="_blank">Myra Lara</a> and I contributed the code.
+                              It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
+                          <p>Check out MemEater <a href="http://www.eveworthington.com/memoryEater/" target="_blank">here</a>.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
           </div>
         <hr>
         </div> <!-- /.container -->
