--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="col-lg-8 col-lg-offset-2">
               <h2>About Eve</h2>
               <h3>Extraordinarily talented, smart, driven and humble web designer and developer.</h3>
-              <p>After graduating from the University of Washington, I taught English in rural Japan for two years. Now I'm back in my home city of Seattle and teaching myself the magical language of the web. You can probably find me coding away in the corner of a local coffee shop. Or at home watching reruns of The X-files. Either way, rest assured that I'm living <em>my best life</em>.</p>
+              <p>After graduating from the University of Washington, I taught English in rural Japan for two years. Now I'm back in my home city of Seattle and teaching myself the magical language of the web. You can probably find me coding away in the corner of a local coffee shop. Or at home watching reruns of The X-Files. Either way, rest assured that I'm living <em>my best life</em>.</p>
               <p>I'm currently a Web Developer apprentice for the amazing <a href="http://www.iangilman.com/" target="_blank">Ian Gilman</a>.</p>
           </div>
         </div>
@@ -179,12 +179,12 @@
                       <div class="row">
                         <div class="col-md-10 col-md-offset-1">
                           <p>MemEater was a collaborative project built in 48 hours for <a href="http://www.arthackday.net/events/erasure" target="_blank">Art Hack Day: Erasure</a>.
-                              Visitors were invited to share a memory via a laptop. Their memory would then displayed via a projector on a wall along with the memories entered by previous participants.
+                              Visitors were invited to share a memory via a laptop. Their memory would then be displayed via a projector on a wall along with the memories entered by previous participants.
                               If MemEater detected that a word was used in multiple memories, it would black out all instances of that word except for the most recent one.
                               The concept, graphics and design were created by the incredible Illustrator/Architect <a href="http://www.myralara.com/" target="_blank">Myra Lara</a> and I contributed the code.
                               It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
                           <p>Check out MemEater <a href="http://www.eveworthington.com/memoryEater/" target="_blank">here</a>.</p>
-                          <p>Tools used: HTML, CSS, JavaScript, jQuery</p>
+                          <p>Tools Used: HTML, CSS, JavaScript, jQuery</p>
                         </div>
                       </div>
                     </div>
@@ -216,7 +216,7 @@
 
                               It was on display at Velocity:V2 for the Art Hack Day: Erasure exhibition on September 17th, 2016.</p>
                           <p>Check out Information Dissemination Specialist <a href="http://www.eveworthington.com/ids/" target="_blank">here</a>.</p>
-                          <p>Tools used: HTML, CSS, JavaScript, jQuery</p>
+                          <p>Tools Used: HTML, CSS, JavaScript, jQuery</p>
                         </div>
                       </div>
                     </div>
@@ -245,7 +245,7 @@
                         <div class="col-md-10 col-md-offset-1">
                           <p>Wage Per Second is a mobile web app that provides users with a visualization of how much money they are earning. Users can enter their hourly wage via an HTML slider, then the app calculates how much the user makes each second. The user may then start a counter which will grow in real-time to show the user how much they are earning in real-time.</p>
                           <p>Check out Wage Per Second <a href="http://www.eveworthington.com/piggy-bank/" target="_blank">here</a>.</p>
-                          <p>Tools used: HTML, CSS, JavaScript, jQuery, SVG animation</p>
+                          <p>Tools Used: HTML, CSS, JavaScript, jQuery, SVG animation</p>
                         </div>
                       </div>
                     </div>
@@ -302,7 +302,7 @@
                         <div class="col-md-10 col-md-offset-1">
                           <p>Weatherrific! is a web app that detects a user's location and shows them the current temperature along with a description of the weather. The user can also search for the weather in other cities. I completed it while working through the front end development portion of <a href="https://www.freecodecamp.com/" target="_blank">Free Code Camp</a>'s curriculum.</p>
                           <p>Check out Weatherrific! <a href="http://codepen.io/1gb/full/ZQwPOO/" target="_blank">here</a>.</p>
-                          <p>Tools used: HTML, CSS, JavaScript, jQuery, HTML 5 Geolocation, AJAX, <a href="http://openweathermap.org/api" target="_blank">OpenWeatherMap API</a>, <a href="https://api.giphy.com/" target="_blank">Giphy API</a></p>
+                          <p>Tools Used: HTML, CSS, JavaScript, jQuery, HTML 5 Geolocation, AJAX, <a href="http://openweathermap.org/api" target="_blank">OpenWeatherMap API</a>, <a href="https://api.giphy.com/" target="_blank">Giphy API</a></p>
                         </div>
                       </div>
                     </div>
@@ -330,7 +330,7 @@
                         <div class="col-md-10 col-md-offset-1">
                           <p>Downuts is a website for a fictional start-up company which offers donuts with stock information printed on them via icing. This is the first project in a series I call "Half-Baked Start-Up Ideas".</p>
                           <p>Check out Downuts <a href="http://www.eveworthington.com/downuts/" target="_blank">here</a>.</p>
-                          <p>Tools used: HTML, CSS, JavaScript, jQuery, Bootstrap</p>
+                          <p>Tools Used: HTML, CSS, JavaScript, jQuery, Bootstrap</p>
                         </div>
                       </div>
                     </div>
