--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
                         <path id="wr" class="cabinPath wr st2" d="M460.3 590.2l56 1.2 10-94.4c0 0-3-9.4-31.3-11.4 -28.3-2-32 9.3-32 9.3L460.3 590.2l27.9 0.6 5.1-104.9 -2.7 57.8 -29-0.7 59.6 1.5"/>
                       </g>
                       <g id="glow">
-                        <radialGradient id="SVGID_1_" cx="357.1032" cy="280.6028" r="59.3442" gradientUnits="userSpaceOnUse">
+                        <!-- <radialGradient id="SVGID_1_" cx="357.1032" cy="280.6028" r="59.3442" gradientUnits="userSpaceOnUse">
                           <stop offset="0" style="stop-color:#FF931E;stop-opacity:0.8"/>
                           <stop offset="0.9811" style="stop-color:#F7C914;stop-opacity:0"/>
-                        </radialGradient>
+                        </radialGradient> -->
                         <ellipse class="st3 fade-in pulse" cx="357.1" cy="280.6" rx="58.6" ry="60.1"/>
                         <radialGradient id="SVGID_2_" cx="493.3333" cy="538.7385" r="58.3873" fx="485.0698" fy="538.9286" gradientUnits="userSpaceOnUse">
-                          <stop offset="0" style="stop-color:#FF931E;stop-opacity:0.8"/>
-                          <stop offset="0.9811" style="stop-color:#F7C914;stop-opacity:0"/>
+                          <stop offset="10%" style="stop-color:#FF931E;stop-opacity:0.8"/>
+                          <stop offset="75%" style="stop-color:#F7C914;stop-opacity:0"/>
                         </radialGradient>
                         <path class="st4 fade-in pulse" d="M456.2 598l4.1-110.4c0 0 8.1-8.7 33-8.1 24.9 0.6 37.1 12.4 37.1 12.4L519.2 598H456.2z"/>
                         <radialGradient id="SVGID_3_" cx="223" cy="537.1231" r="58.1384" gradientUnits="userSpaceOnUse">
-                          <stop offset="0" style="stop-color:#FF931E;stop-opacity:0.8"/>
-                          <stop offset="0.9811" style="stop-color:#F7C914;stop-opacity:0"/>
+                          <stop offset="10%" style="stop-color:#FF931E;stop-opacity:0.8"/>
+                          <stop offset="75%" style="stop-color:#F7C914;stop-opacity:0"/>
                         </radialGradient>
                         <path class="st5 fade-in pulse" d="M200.1 593l-8.7-101.7c0 0 6.6-9.5 27.9-10s30.4 7.5 30.4 7.5l5.1 104.3H200.1z"/>
                       </g>
