--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               </div>
 
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal4-modal-lg" src="img/portfolio/summerRip800x600.png" alt="">
+                <img class="img-responsive img-thumbnail galthumb" data-toggle="modal" data-target=".bd-gal4-modal-lg" src="img/portfolio/summerRip800x600.jpg" alt="">
               </div>
 
               <!-- Modal -->
@@ -267,7 +267,7 @@
                     </div>
                     <div class="modal-body">
                       <div class="row">
-                        <img src="img/portfolio/summerRip1500x800.png" class="img-responsive" alt="The Summer Rip">
+                        <img src="img/portfolio/summerRip1500x800.jpg" class="img-responsive" alt="The Summer Rip">
                       </div>
                       <div class="row">
                         <div class="col-md-10 col-md-offset-1">
