--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
@@ -272,7 +272,7 @@
                       <div class="row">
                         <div class="col-md-10 col-md-offset-1">
                           <p>The Summer Rip was a project created for <a href="https://www.name.com/hackthedot" target="_blank">Hack the Dot</a> Seattle: Summer is Dead Edition, which took place in Seattle on August 3, 2016. Hack the Dot is a hackathon in which teams have only 2 hours to contstruct a website for a given domain name.
-                              The challenge was to create a website for the domain <strong>thesummer.rip</strong> and my team decided to go with the concept of summer arriving and wanting to rip your pant legs off into shorts. I contributed the SVG graphics.
+                              The challenge was to create a website for the domain thesummer.rip and my team decided to go with the concept of summer arriving and wanting to rip your pant legs off into shorts. I contributed the SVG graphics.
                           <p>Check out The Summer Rip <a href="http://the-summer-rip.surge.sh/" target="_blank">here</a>.</p>
                           <p>For the GitHub for The Summer Rip and to see the others who contributed, go <a href="https://github.com/brybrophy/the_summer_rip" target="_blank">here</a>.</p>
                         </div>
@@ -438,13 +438,13 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/grayscale.js"></script>
