svg fix, scroll fix

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                         <!-- <radialGradient id="SVGID_1_" cx="357.1032" cy="280.6028" r="59.3442" gradientUnits="userSpaceOnUse">
                           <stop offset="0" style="stop-color:#FF931E;stop-opacity:0.8"/>
                           <stop offset="0.9811" style="stop-color:#F7C914;stop-opacity:0"/>
-                        </radialGradient> -->
-                        <ellipse class="st3 fade-in pulse" cx="357.1" cy="280.6" rx="58.6" ry="60.1"/>
+                        </radialGradient>
+                        <ellipse class="st3 fade-in pulse" cx="357.1" cy="280.6" rx="58.6" ry="60.1"/> -->
                         <radialGradient id="SVGID_2_" cx="493.3333" cy="538.7385" r="58.3873" fx="485.0698" fy="538.9286" gradientUnits="userSpaceOnUse">
                           <stop offset="10%" style="stop-color:#FF931E;stop-opacity:0.8"/>
                           <stop offset="75%" style="stop-color:#F7C914;stop-opacity:0"/>
@@ -412,16 +412,16 @@
             </p>
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="https://twitter.com/yesthisiseve" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    <a href="https://twitter.com/yesthisiseve" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                 </li>
                 <li>
-                    <a href="https://github.com/1gb" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    <a href="https://github.com/1gb" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                 </li>
                 <li>
-                    <a href="http://codepen.io/1gb/pens/public/" class="btn btn-default btn-lg"><i class="fa fa-codepen fa-fw"></i> <span class="network-name">Codepen</span></a>
+                    <a href="http://codepen.io/1gb/pens/public/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-codepen fa-fw"></i> <span class="network-name">Codepen</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/256mb/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                    <a href="https://www.instagram.com/256mb/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                 </li>
             </ul>
         </div>
