--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE svg PUBLIC “-//W3C//DTD SVG 1.1//EN”
-“http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd”>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -76,6 +75,9 @@
                 <div class="col-md-8 col-md-offset-2">
                   <div class="cabin">
 
+                    <?xml version="1.0" standalone="no"?>
+                    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
+              "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 800 800" xml:space="preserve" enable-background="new 0 0 800 800">
                       <style type="text/css">
 
