--- a/index.html
+++ b/index.html
@@ -75,13 +75,10 @@
                 <div class="col-md-8 col-md-offset-2">
                   <div class="cabin">
 
-                    <?xml version="1.0" standalone="no"?>
-                    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
-              "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 800 800" xml:space="preserve" enable-background="new 0 0 800 800">
                       <style type="text/css">
 
-                    	/*.st0{fill:#686868;}
+                    	.st0{fill:#686868;}
                     	.st1{fill:none;stroke:#FFFFFF;stroke-miterlimit:10;}
                     	.st2{fill:none;stroke:#FFFFFF;stroke-linejoin:round;stroke-miterlimit:10;}*/
                     	/*.st3{opacity:0.58;fill:url(#SVGID_1_);}
