--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
                     	.st0{fill:#686868;}
                     	.st1{fill:none;stroke:#FFFFFF;stroke-miterlimit:10;}
-                    	.st2{fill:none;stroke:#FFFFFF;stroke-linejoin:round;stroke-miterlimit:10;}*/
-                    	/*.st3{opacity:0.58;fill:url(#SVGID_1_);}
+                    	.st2{fill:none;stroke:#FFFFFF;stroke-linejoin:round;stroke-miterlimit:10;}
+                    	.st3{opacity:0.58;fill:url(#SVGID_1_);}
                     	.st4{opacity:0.58;fill:url(#SVGID_2_);}
-                    	.st5{opacity:0.58;fill:url(#SVGID_3_);}*/
+                    	.st5{opacity:0.58;fill:url(#SVGID_3_);}
 
                       </style>
                       <g id="main">
