change font awesome icon in navbar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-code fa-lg codeIcon"></i> Eve Worthington
+                    <!-- <i class="fa fa-leaf fa-lg"></i> -->
+                    Eve Worthington
                 </a>
             </div>
 
@@ -117,8 +118,8 @@
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
               <h2>About Eve</h2>
-              <h3>Extraordinarily talented, smart, driven and humble web designer and developer.</h3>
-              <p>After graduating from the University of Washington, I taught English in rural Japan for two years. Now I'm back in my home city of Seattle and teaching myself the magical language of the web. You can probably find me coding away in the corner of a local coffee shop. Or at home watching reruns of The X-Files. Either way, rest assured that I'm living <em>my best life</em>.</p>
+              <h3>Extraordinarily talented, smart, driven and humble web developer.</h3>
+              <p>After graduating from the University of Washington, I taught English in rural Japan for two years. Now I'm back in my home city of Seattle and teaching myself the magical language of the web. You can probably find me coding away in the corner of a local coffee shop. Or at home watching reruns of The X-Files with my cats.</p>
               <p>I'm currently a Web Developer apprentice for the amazing <a href="http://www.iangilman.com/" target="_blank">Ian Gilman</a>.</p>
           </div>
         </div>
